automatically backed up by learn

--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -1,3 +1,4 @@
 <% q1 = Quiz.new(1, "Should I go out tonight?")%>
 <a href = "/quiz/1">Should I go out tonight</a>
 <% q2 = Quiz.new(2, "What should I wear")%>
+<a href = "/quiz/2">What should I wear</a>
