--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -1,4 +1,7 @@
-<% q1 = Quiz.new(1, "Should I go out tonight?")%>
-<a href = "/quiz/1">Should I go out tonight</a>
-<% q2 = Quiz.new(2, "What should I wear")%>
-<a href = "/quiz/2">What should I wear</a>
+<h1>What do you need advice on?</h1>
+
+<ul>
+  <% Quiz.all.each do |quiz| %>
+  <li><a href="/quiz/<%= quiz.id %>"><%= quiz.title %></a></li>
+  <% end %>
+</ul>
