automatically backed up by learn

--- a/app/views/quiz.html.erb
+++ b/app/views/quiz.html.erb
@@ -1,3 +1,8 @@
-<form method = "POST" action = "/quiz/:id"
-  <p>
-</form>
+<p>
+  <input type="radio" name="next_step" id="R2" value="R2" />
+  <label for="R2">Yes</label>
+</p>
+<p>
+  <input type="radio" name="next_step" id="Q2" value="Q2" />
+  <label for="Q2">No</label>
+</p>
